hard-gists/94412c4808421acbd1d0/run.log
=== Docker Run Log for 94412c4808421acbd1d0 ===
Started at: Mi 29. Okt 18:25:15 CET 2025

[2025-10-29 18:25:16] START: Running container for 94412c4808421acbd1d0
[2025-10-29 18:25:16] SUCCESS: Container 4997802c66891ddcaf1f76d8afa2fa108d0e488824d5175526caa8157764b7ef started for 94412c4808421acbd1d0
=== Container logs for 94412c4808421acbd1d0 ===
  File "/snippet.py", line 102
    print ".",
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 94412c4808421acbd1d0 ===
[2025-10-29 18:25:18] INFO: Container 4997802c66891ddcaf1f76d8afa2fa108d0e488824d5175526caa8157764b7ef has stopped
